3.Semantic.Analysis/test/semanal/error/error4_1_5.mod
module open;
var a : integer[5][];

procedure f(a : integer[]);
var b : integer[];
begin
end f;

begin

end open.
